kubernetes/cluster/default/homer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: default
  labels:
    app.kubernetes.io/name: homer
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: home.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homer
                port:
                  number: 8080
  tls:
    - hosts:
        - home.brhd.io
